src/objects/marchandise__c.object
<CustomObject>
    <fields>
        <fullName>Total_Inventory__c</fullName>
        <label>Total Inventory</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>marchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>marchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>marchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>